packages/llvm/src/tests/modules/snapshots/llvm__tests__modules__    export function boo(x : number) : number {        return 5*x;    };    .snap
---
source: packages/llvm/src/tests/modules/mod.rs
expression: content

---
; ModuleID = '/home/nivekithan/code/work/tpm/packages/llvm/boo'
source_filename = "/home/nivekithan/code/work/tpm/packages/llvm/boo"

define private void @main() {
entry:
  ret void
}

define double @boo_(double %0) {
main:
  %x_ = alloca double, align 8
  store double %0, double* %x_, align 8
  %"3" = load double, double* %x_, align 8
  %"1" = fmul double 5.000000e+00, %"3"
  ret double %"1"
}

