packages/llvm/src/tests/modules/snapshots/llvm__tests__modules__    export function foo(x : number) : number {        return x + 5;    };    .snap
---
source: packages/llvm/src/tests/modules/mod.rs
expression: content

---
; ModuleID = 'foo'
source_filename = "foo"

define private void @main() {
entry:
  ret void
}

define double @foo_(double %0) {
main:
  %x_ = alloca double, align 8
  store double %0, double* %x_, align 8
  %"2" = load double, double* %x_, align 8
  %"1" = fadd double %"2", 5.000000e+00
  ret double %"1"
}

